--- a/src/themes/fennec/top-bar/team/team.css
+++ b/src/themes/fennec/top-bar/team/team.css
@@ -4,10 +4,10 @@
 
 .team.--left {
 	grid-area: team-left;
-	transform: skewX(20deg) translateX(-2.1rem);
+	transform: skewX(20deg) translateX(-1.65rem);
 }
 
 .team.--right {
 	grid-area: team-right;
-	transform: skewX(-20deg) translateX(2.1rem);
+	transform: skewX(-20deg) translateX(1.65rem);
 }
